--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react",
+  "homepage": "https://tirthpatel9.github.io/roboFriends-react_project",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "literal": "^0.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "string": "^3.3.3",
     "tachyons": "^4.12.0"
   },
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "devDependencies": {
     "react-scripts": "latest"
