--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "react",
-  "homepage": "https://tirthpatel9.github.io/roboFriends-react_project",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -14,7 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "react-scripts": "latest"
